ajustando hero e finalizando event

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!!!</title>
     <link rel="shortcut icon" href="./images/bolo_icon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
-    <img src="./images/aniversariante.jpg" alt="#">
+    <header class="hero">
+        <div class="container">
+            <img class="hero__image" src="./images/aniversariante.jpg" alt="">
+            <h1 class="hero__title">
+                Aquele em que a 
+                <span class="red_span">&nbsp;&bull;</span>P<span class="blue_span">&nbsp;&bull;</span>a<span class="yellow_span">&nbsp;&bull;</span>o<span class="red_span">&nbsp;&bull;</span>l<span class="blue_span">&nbsp;&bull;</span>a<span class="yellow_span">&nbsp;&bull;</span>
+                faz 30 anos
+            </h1>
+            <p class="hero__text"><span id="meter">10d 12h 20m 15s</span></p>
+        </div>
+    </header>
+    <section class="event event--one">
+        <div class="container" data-aos="zoom-in-left">
+            <div class="event__details">
+                <h2 class="event__details__title">"Why, God, why?"</h2>
+                <p class="event__details__text">
+                    Completar 30 anos é como chegar a um marco especial na jornada da vida. 
+                    É um momento em que olhamos para trás com um sorriso nostálgico, lembrando 
+                    de todas as experiências e lições que acumulamos ao longo do caminho. 
+                    As lembranças de momentos de alegria, conquistas e até os desafios superados, 
+                    se misturam para formar a base sólida sobre a qual continuamos a construir nosso futuro.
+                </p>
+            </div>
+            <img class="event__image" src="./images/gif_friends_joe.gif" alt="#">
+        </div>
+    </section>
+    <section class="event event--two event--image-left">
+        <div class="container" data-aos="zoom-in-left">
+            <div class="event__details">
+                <!-- <h2 class="event__details__title">"Why, God, why?"</h2> -->
+                <p class="event__details__text">
+                    Aos 30 anos, muitas vezes sentimos uma sensação de maturidade que vem com 
+                    a experiência. Já não somos mais os mesmos de uma década atrás; crescemos, 
+                    amadurecemos e entendemos melhor nossas paixões e objetivos. É uma fase em 
+                    que começamos a nos sentir mais confortáveis em nossa própria pele, abraçando 
+                    quem realmente somos, com todas as nossas qualidades e imperfeições.
+                </p>
+            </div>
+            <img class="event__image" src="./images/friends_img_1.jpg" alt="#">
+        </div>
+    </section>
+    <section class="event event--three">
+        <div class="container" data-aos="zoom-in-left">
+            <div class="event__details">
+                <!-- <h2 class="event__details__title">"Why, God, why?"</h2> -->
+                <p class="event__details__text">
+                    Ao mesmo tempo, essa idade traz consigo um sentimento de expectativa e 
+                    excitação pelo que ainda está por vir. Aos 30 anos, a vida ainda está 
+                    repleta de possibilidades e sonhos a serem realizados. É um convite para 
+                    explorar novas oportunidades, se arriscar e continuar perseguindo nossos 
+                    desejos mais profundos com a confiança que só a experiência pode proporcionar.
+                </p>
+            </div>
+            <img class="event__image" src="./images/friends_img_2.jpg" alt="#">
+        </div>
+    </section>
+    <section class="event event--four event--image-left">
+        <div class="container" data-aos="zoom-in-left">
+            <div class="event__details">
+                <!-- <h2 class="event__details__title">"Why, God, why?"</h2> -->
+                <p class="event__details__text">
+                    Em suma, completar 30 anos é um equilíbrio emocionante entre o passado e o futuro. 
+                    É celebrar a jornada até aqui e olhar com entusiasmo para o que ainda está por vir. 
+                    É viver intensamente o presente, sabendo que cada dia é uma nova chance de crescer, 
+                    aprender e amar. E assim, seguimos adiante, escrevendo novos capítulos cheios de aventuras 
+                    e realizações.
+                </p>
+            </div>
+            <img class="event__image" src="./images/coracao_img.jpg" alt="#">
+        </div>
+    </section>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
