finalizando contador e concluindo pagina

--- a/src/index.html
+++ b/src/index.html
@@ -20,64 +20,68 @@
                 <span class="red_span">&nbsp;&bull;</span>P<span class="blue_span">&nbsp;&bull;</span>a<span class="yellow_span">&nbsp;&bull;</span>o<span class="red_span">&nbsp;&bull;</span>l<span class="blue_span">&nbsp;&bull;</span>a<span class="yellow_span">&nbsp;&bull;</span>
                 faz 30 anos
             </h1>
-            <p class="hero__text"><span id="meter">10d 12h 20m 15s</span></p>
+            <span class="hero__text" id="counter"></span>
         </div>
     </header>
-    <section class="event event--one">
+    <section class="event event--gradient-one">
         <div class="container" data-aos="zoom-in-left">
             <div class="event__details">
                 <h2 class="event__details__title">"Why, God, why?"</h2>
                 <p class="event__details__text">
-                    Completar 30 anos é como chegar a um marco especial na jornada da vida. 
-                    É um momento em que olhamos para trás com um sorriso nostálgico, lembrando 
-                    de todas as experiências e lições que acumulamos ao longo do caminho. 
-                    As lembranças de momentos de alegria, conquistas e até os desafios superados, 
-                    se misturam para formar a base sólida sobre a qual continuamos a construir nosso futuro.
+                    Completar 30 anos é um marco significativo na vida de qualquer pessoa. 
+                    É uma fase de reflexão, onde olhamos para trás e avaliamos as conquistas 
+                    e os desafios que enfrentamos até agora. É um momento em que muitas pessoas 
+                    começam a se sentir mais confiantes e seguras de si mesmas, com uma visão mais 
+                    clara de seus objetivos e aspirações. Ao mesmo tempo, é uma oportunidade para 
+                    redefinir prioridades e fazer ajustes no caminho. A maturidade adquirida ao longo 
+                    dos anos nos permite tomar decisões mais ponderadas e apreciar as pequenas coisas 
+                    da vida. Com 30 anos, a vida começa a ganhar um novo sabor, misturando a energia 
+                    e a disposição da juventude com a sabedoria que só o tempo pode proporcionar.
                 </p>
             </div>
             <img class="event__image" src="./images/gif_friends_joe.gif" alt="#">
         </div>
     </section>
-    <section class="event event--two event--image-left">
+    <section class="event event--gradient-two event--image-left">
         <div class="container" data-aos="zoom-in-left">
             <div class="event__details">
-                <!-- <h2 class="event__details__title">"Why, God, why?"</h2> -->
+                <h2 class="event__details__title">Aos 30: Laços de Família e Amizade que Enriquecem a Vida</h2>
                 <p class="event__details__text">
-                    Aos 30 anos, muitas vezes sentimos uma sensação de maturidade que vem com 
-                    a experiência. Já não somos mais os mesmos de uma década atrás; crescemos, 
-                    amadurecemos e entendemos melhor nossas paixões e objetivos. É uma fase em 
-                    que começamos a nos sentir mais confortáveis em nossa própria pele, abraçando 
-                    quem realmente somos, com todas as nossas qualidades e imperfeições.
+                    Aos 30 anos, a importância da família e dos amigos se torna ainda mais evidente. 
+                    Eles são nosso porto seguro, aqueles com quem compartilhamos momentos de alegria, 
+                    tristeza, vitórias e desafios. A família nos oferece suporte incondicional e nos 
+                    ajuda a manter nossas raízes e valores firmes. 
                 </p>
             </div>
             <img class="event__image" src="./images/friends_img_1.jpg" alt="#">
         </div>
     </section>
-    <section class="event event--three">
+    <section class="event event--gradient-three">
         <div class="container" data-aos="zoom-in-left">
             <div class="event__details">
-                <!-- <h2 class="event__details__title">"Why, God, why?"</h2> -->
                 <p class="event__details__text">
-                    Ao mesmo tempo, essa idade traz consigo um sentimento de expectativa e 
-                    excitação pelo que ainda está por vir. Aos 30 anos, a vida ainda está 
-                    repleta de possibilidades e sonhos a serem realizados. É um convite para 
-                    explorar novas oportunidades, se arriscar e continuar perseguindo nossos 
-                    desejos mais profundos com a confiança que só a experiência pode proporcionar.
+                    Os amigos, por sua vez, nos proporcionam 
+                    a leveza e a diversão necessárias para enfrentar a vida cotidiana. Eles nos incentivam, 
+                    nos inspiram e muitas vezes nos ajudam a enxergar diferentes perspectivas. Aos 30 anos, 
+                    essas relações ganham um significado profundo, pois são um alicerce fundamental para nosso 
+                    bem-estar emocional e para o desenvolvimento pessoal contínuo. Juntos, família e amigos tornam 
+                    a jornada da vida mais rica e significativa. 
                 </p>
             </div>
             <img class="event__image" src="./images/friends_img_2.jpg" alt="#">
         </div>
     </section>
-    <section class="event event--four event--image-left">
+    <section class="event event--gradient-four event--image-left">
         <div class="container" data-aos="zoom-in-left">
             <div class="event__details">
-                <!-- <h2 class="event__details__title">"Why, God, why?"</h2> -->
+                <h2 class="event__details__title">사랑해</h2>
                 <p class="event__details__text">
-                    Em suma, completar 30 anos é um equilíbrio emocionante entre o passado e o futuro. 
-                    É celebrar a jornada até aqui e olhar com entusiasmo para o que ainda está por vir. 
-                    É viver intensamente o presente, sabendo que cada dia é uma nova chance de crescer, 
-                    aprender e amar. E assim, seguimos adiante, escrevendo novos capítulos cheios de aventuras 
-                    e realizações.
+                    Todos os dias o seu amor me sustenta, me ensina e me encoraja.
+                    A todo o momento eu sinto o seu carinho, cuidado e tenho a certeza de 
+                    que tenho ao meu lado o amor de uma vida inteira. 
+                    Como agradecer a Deus por esse presente?
+                    Meu agradecimento é o meu coração, que entrego completamente a você, hoje e sempre.
+                    Te amo!
                 </p>
             </div>
             <img class="event__image" src="./images/coracao_img.jpg" alt="#">
